# appsoftcomp-finalproject

./: .gitignore  PRD.md  clean_data.py  main.py  notebook.py  pyproject.toml
data/cleaned/: Amazon_cleaned.csv  Apple_cleaned.csv  Google_cleaned.csv  Microsoft_cleaned.csv  Netflix_cleaned.csv  combined_analysis_data.csv  description.md  internet_usage_cleaned.csv  stocks_monthly_aggregated.csv
data/exports/: correlation_results.csv  correlation_results.xlsx  summary_statistics.csv
data/raw/: description.md
data/raw/company_trend_data/: multiTimeline.csv
